--- a/SEA_Application/Views/Admin_Dashboard/BlankPage.cshtml
+++ b/SEA_Application/Views/Admin_Dashboard/BlankPage.cshtml
@@ -25,6 +25,10 @@ else if (User.IsInRole("Staff"))
     Layout = "~/Views/Shared/_StaffDashboardLayout.cshtml";
 }
 <script>
+    $(document).ready(function () {
+     localStorage.ElementToActiveAfterPageLoad = "AdminHome";
+
+    })
     //$(document).ready(function () {
 
     //    $.ajax({
