--- a/SEA_Application/Views/Admin_Dashboard/Blogs.cshtml
+++ b/SEA_Application/Views/Admin_Dashboard/Blogs.cshtml
@@ -6,131 +6,162 @@
 
 <script>
     $(document).ready(function () {
-             var  table = $('#datatable').dataTable({
-                buttons: [
-                    {
-                        text: '<span class="datatableButtonsReset"> <img src="/Content/assets/assets/icons/Icon-Reset2.png" alt=""> Reset</span>'
-                    },
-                    {
-                        text: '<span class="datatableButtonsEdit"> <img src="/Content/assets/assets/icons/Icon-edit.png" alt=""> Create</span>',
-                        action: function (e, dt, button, config) {
-                            window.location.href = '/Admin_Dashboard/CreateBlog';
-                        }
-                    },
-                    {
-                        text: '<span class="datatableButtonsDownload"> <img src="/Content/assets/assets/icons/Icon-download.png" alt=""> Download</span>'
-                    }
-                ],
-                "language": {
-                    "lengthMenu": "<div class=\"d-flex showEntriesCon\">\n" +
-                        "  <div class=\"p-2\">Show </div> <div class=\"showEntries\"> _MENU_\n" +
-                        "  </div>\n" +
-                        "  </div>",
-                    "info": "<div class='showingEntriesOfTotal'>Showing <span class=\"text-info\">_START_ to _END_</span> of _TOTAL_ entries</div>",
-                    "paginate": {
-                        "first": "Firstt",
-                        "last": "Lastt",
-                        "next": ' <img src="~/Content/assets/assets/icons/Arrow2.png" alt=""> ',
-                        "previous": ' <img src="~/Content/assets/assets/icons/Arrow1.png" alt=""> '
+        var table = $('#datatable').dataTable({
+            buttons: [
+                {
+                    text: '<span class="datatableButtonsReset"> <img src="/Content/assets/assets/icons/Icon-Reset2.png" alt=""> Reset</span>'
+                },
+                {
+                    text: '<span class="datatableButtonsEdit"> <img src="/Content/assets/assets/icons/Icon-edit.png" alt=""> Create</span>',
+                    action: function (e, dt, button, config) {
+                        window.location.href = '/Admin_Dashboard/CreateBlog';
                     }
                 },
-                "searching": true,
-                // dom: '<"class">Blfrtip',
-                dom: "<'row mb-3'<'col-sm-12 col-md-2 col-lg-2'l><'col-sm-12 col-md-10 col-lg-10 datatableButtonsCon text-right'Bf>>" +
-                    "<'row'<'col-sm-12 datatablesData'tr>>" +
-                    "<'row mt-4'<'col-sm-12 col-md-4 col-lg-6 infoCon'i><'col-sm-12 col-md-8 col-lg-6 pagCon'p>>",
-               });
-
-
-               $("#ClassID").prepend('<option value="0" >All</option>');
-
-                       $("#PageHeader").html("Blogs Panel");
-
-            $("#BreadCrumbs").append(' <li> <a href="/Account/Dashboard"> Home </a> <span>&gt;</span></li>');
-            $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#">Blogs Panel </a></li>');
-
-
-
-        $('.table').on('click', 'tbody tr', function () {
-            var td = $(this).children("td");
-            var userName = $(td[0]).children("input").val();
-            userName = userName.trim();
-
-            window.location.href = "/AspNetSession/Details?id=" + userName;
+                {
+                    text: '<span class="datatableButtonsDownload"> <img src="/Content/assets/assets/icons/Icon-download.png" alt=""> Download</span>'
+                }
+            ],
+            "language": {
+                "lengthMenu": "<div class=\"d-flex showEntriesCon\">\n" +
+                    "  <div class=\"p-2\">Show </div> <div class=\"showEntries\"> _MENU_\n" +
+                    "  </div>\n" +
+                    "  </div>",
+                "info": "<div class='showingEntriesOfTotal'>Showing <span class=\"text-info\">_START_ to _END_</span> of _TOTAL_ entries</div>",
+                "paginate": {
+                    "first": "Firstt",
+                    "last": "Lastt",
+                    "next": ' <img src="~/Content/assets/assets/icons/Arrow2.png" alt=""> ',
+                    "previous": ' <img src="~/Content/assets/assets/icons/Arrow1.png" alt=""> '
+                }
+            },
+            "searching": true,
+            // dom: '<"class">Blfrtip',
+            dom: "<'row mb-3'<'col-sm-12 col-md-2 col-lg-2'l><'col-sm-12 col-md-10 col-lg-10 datatableButtonsCon text-right'Bf>>" +
+                "<'row'<'col-sm-12 datatablesData'tr>>" +
+                "<'row mt-4'<'col-sm-12 col-md-4 col-lg-6 infoCon'i><'col-sm-12 col-md-8 col-lg-6 pagCon'p>>",
         });
+
+
+        $("#ClassID").prepend('<option value="0" >All</option>');
+
+        $("#PageHeader").html("Blogs Panel");
+
+        $("#BreadCrumbs").append(' <li> <a href="/Account/Dashboard"> Home </a> <span>&gt;</span></li>');
+        $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#">Blogs Panel </a></li>');
+
+
+
+        $('.table').on('click', 'tbody tr td:nth-child(1),td:nth-child(2),td:nth-child(3),td:nth-child(4),td:nth-child(5)', function () {
+        //  var td = $(this).children("td");
+          var td =  $(this).parent().children("td");
+
+            var userName = $(td[0]).children("input").val();
+          var ID = userName.trim();
+
+          window.location.href = "/Admin_Dashboard/EditBlog?id=" + ID;
+        });
+
+
+        $("#ModalDelete").click(function () {
+
+            var BlogIdToDelete = $("#BlogToDeleteId").val();
+
+            $.ajax({
+
+                type: "POST",
+                url: "/Admin_Dashboard/DeleteBlog",
+                data: { "Id": BlogIdToDelete },
+                success: function (data) {
+
+                    window.location.href = "/Admin_Dashboard/Blogs";
+
+                }
+
+
+            })
+
+        })
 
     });
 
-    function DrawTable() {
-        $('#example_filter').addClass("form-group");
-        $('#example_filter').addClass("has-feedback");
-        $('#example_length').addClass("col-lg-9 col-md-8 col-sm-12 col-xs-12");
-        //$('#example_filter').addClass("col-lg-4 col-md-4 col-sm-12 col-xs-12");
-        $('#example_wrapper').css("text-align", "left");
-        $('#example_length').css("text-align", "left");
-        $('#example_length label').addClass("col-md-3 col-sm-12 col-lg-2");
-        $("#example_length label").css("text-align", "left");
-        $('#example_length label').addClass("col-md-2 col-lg-2 col-sm-12");
-        // // $('#example_length label select').addClass("col-md-3 col-sm-8 col-lg-3"); : auto;
-        $('#example_filter input').css({ "border": "1px solid #ddd", "border-radius": "40px", "height": "30px", "margin-top": "-5px", "outline": "none", "padding-left": "10px", "color": "#000000 !important" });
-        //$('#example_length').css({ "overflow": "auto" });
-        $('#example_filter input').addClass("add");
-        $('#example_filter').append('<span class="glyphicon glyphicon-search form-control-feedback" style="margin-top: -33px; color: #666;"></span>');
-        var list = $("#ClassID").html();
-        $('#example_length').append(
+    //function DrawTable() {
+    //    $('#example_filter').addClass("form-group");
+    //    $('#example_filter').addClass("has-feedback");
+    //    $('#example_length').addClass("col-lg-9 col-md-8 col-sm-12 col-xs-12");
+    //    //$('#example_filter').addClass("col-lg-4 col-md-4 col-sm-12 col-xs-12");
+    //    $('#example_wrapper').css("text-align", "left");
+    //    $('#example_length').css("text-align", "left");
+    //    $('#example_length label').addClass("col-md-3 col-sm-12 col-lg-2");
+    //    $("#example_length label").css("text-align", "left");
+    //    $('#example_length label').addClass("col-md-2 col-lg-2 col-sm-12");
+    //    // // $('#example_length label select').addClass("col-md-3 col-sm-8 col-lg-3"); : auto;
+    //    $('#example_filter input').css({ "border": "1px solid #ddd", "border-radius": "40px", "height": "30px", "margin-top": "-5px", "outline": "none", "padding-left": "10px", "color": "#000000 !important" });
+    //    //$('#example_length').css({ "overflow": "auto" });
+    //    $('#example_filter input').addClass("add");
+    //    $('#example_filter').append('<span class="glyphicon glyphicon-search form-control-feedback" style="margin-top: -33px; color: #666;"></span>');
+    //    var list = $("#ClassID").html();
+    //    $('#example_length').append(
 
-            '<div class="col-md-1" style="width:0%; padding-left:1px;">' +
-             '<div class="d-bar"></div>' +
-            '</div>'
-              +
+    //        '<div class="col-md-1" style="width:0%; padding-left:1px;">' +
+    //         '<div class="d-bar"></div>' +
+    //        '</div>'
+    //          +
 
-           '<div class="col-md-4 col-lg-4" style="padding-left=0px">' +
-           '<div class="col-md-1 col-sm-3 col-xs-3" style="padding-left:0px"><a href=""><i class="glyphicon glyphicon-repeat" data-toggle="tooltip" title="Refresh" data-placement="bottom"></i></a></div>' +
-           '<div class="col-md-1 col-sm-3 col-xs-3"><a href="/AspNetSession/Create"><i class="glyphicon glyphicon-edit" data-placement="bottom"></i></a></div>' +
-           '<div class="col-md-1 col-sm-3 col-xs-3"><span class="default"><a href=""><span style="color:grey"><i class="fa fa-ban"  data-placement="bottom"></i></span></span>' + '</a></div>' +
-           '<div class="col-md-1 col-sm-3 col-xs-3"><a href=""><span style="color:grey"><i class="glyphicon glyphicon-download-alt" data-placement="bottom"></i></span></span></a></div>' +
-           ' <div class="col-md-1" style="width:0%; padding-left:10px;">' +
-           '<div class="d-bar"></div>' +
-           '</div>' +
-          '</div>');
-        $("#Class").prepend("<option value='0'>All</option>");
+    //       '<div class="col-md-4 col-lg-4" style="padding-left=0px">' +
+    //       '<div class="col-md-1 col-sm-3 col-xs-3" style="padding-left:0px"><a href=""><i class="glyphicon glyphicon-repeat" data-toggle="tooltip" title="Refresh" data-placement="bottom"></i></a></div>' +
+    //       '<div class="col-md-1 col-sm-3 col-xs-3"><a href="/AspNetSession/Create"><i class="glyphicon glyphicon-edit" data-placement="bottom"></i></a></div>' +
+    //       '<div class="col-md-1 col-sm-3 col-xs-3"><span class="default"><a href=""><span style="color:grey"><i class="fa fa-ban"  data-placement="bottom"></i></span></span>' + '</a></div>' +
+    //       '<div class="col-md-1 col-sm-3 col-xs-3"><a href=""><span style="color:grey"><i class="glyphicon glyphicon-download-alt" data-placement="bottom"></i></span></span></a></div>' +
+    //       ' <div class="col-md-1" style="width:0%; padding-left:10px;">' +
+    //       '<div class="d-bar"></div>' +
+    //       '</div>' +
+    //      '</div>');
+    //    $("#Class").prepend("<option value='0'>All</option>");
+    //}
+
+    //function DrawTable1(){
+    //    $('#example_filter').addClass("form-group");
+    //    $('#example_filter').addClass("has-feedback");
+    //    $('#example_length').addClass("col-lg-9 col-md-8 col-sm-12 col-xs-12");
+    //    //$('#example_filter').addClass("col-lg-4 col-md-4 col-sm-12 col-xs-12");
+    //    $('#example_wrapper').css("text-align", "left");
+    //    $('#example_length').css("text-align", "left");
+    //    $('#example_length label').addClass("col-md-3 col-sm-12 col-lg-2");
+    //    $("#example_length label").css("text-align", "left");
+    //    $('#example_length label').addClass("col-md-2 col-lg-2 col-sm-12");
+    //    // // $('#example_length label select').addClass("col-md-3 col-sm-8 col-lg-3"); : auto;
+    //    $('#example_filter input').css({ "border": "1px solid #ddd", "border-radius": "40px", "height": "30px", "margin-top": "-5px", "outline": "none", "padding-left": "10px", "color": "#000000 !important" });
+    //    //$('#example_length').css({ "overflow": "auto" });
+    //    $('#example_filter input').addClass("add");
+    //    $('#example_filter').append('<span class="glyphicon glyphicon-search form-control-feedback" style="margin-top: -33px; color: #666;"></span>');
+    //    var list = $("#ClassID").html();
+    //    $('#example_length').append(
+
+    //        '<div class="col-md-1" style="width:0%; padding-left:1px;">' +
+    //         '<div class="d-bar"></div>' +
+    //        '</div>'
+    //          +
+
+    //       '<div class="col-md-4 col-lg-4" style="padding-left=0px">' +
+    //       '<div class="col-md-1 col-sm-3 col-xs-3" style="padding-left:0px"><a href=""><i class="glyphicon glyphicon-repeat" data-toggle="tooltip" title="Refresh" data-placement="bottom"></i></a></div>' +
+    //       '<div class="col-md-1 col-sm-3 col-xs-3"><span class="default"><i class="glyphicon glyphicon-edit" data-placement="bottom"></i></a></div>' +
+    //       '<div class="col-md-1 col-sm-3 col-xs-3"><span class="default"><i class="fa fa-ban"  data-placement="bottom"></i></span>' + '</a></div>' +
+    //       '<div class="col-md-1 col-sm-3 col-xs-3"><span class="default"><i class="glyphicon glyphicon-download-alt" data-placement="bottom"></i></span></a></div>' +
+    //       ' <div class="col-md-1" style="width:0%; padding-left:10px;">' +
+    //       '<div class="d-bar"></div>' +
+    //       '</div>' +
+    //      '</div>');
+    //    $("#Class").prepend("<option value='0'>All</option>");
+    //}
+
+    function DeleteBlog(id) {
+        //BlogToDeleteId
+        //   alert(id);
+        $("#BlogToDeleteId").val(id);
+
+        var IDValue = $("#BlogToDeleteId").val();
+        // alert(IDValue);
     }
-
-    function DrawTable1(){
-        $('#example_filter').addClass("form-group");
-        $('#example_filter').addClass("has-feedback");
-        $('#example_length').addClass("col-lg-9 col-md-8 col-sm-12 col-xs-12");
-        //$('#example_filter').addClass("col-lg-4 col-md-4 col-sm-12 col-xs-12");
-        $('#example_wrapper').css("text-align", "left");
-        $('#example_length').css("text-align", "left");
-        $('#example_length label').addClass("col-md-3 col-sm-12 col-lg-2");
-        $("#example_length label").css("text-align", "left");
-        $('#example_length label').addClass("col-md-2 col-lg-2 col-sm-12");
-        // // $('#example_length label select').addClass("col-md-3 col-sm-8 col-lg-3"); : auto;
-        $('#example_filter input').css({ "border": "1px solid #ddd", "border-radius": "40px", "height": "30px", "margin-top": "-5px", "outline": "none", "padding-left": "10px", "color": "#000000 !important" });
-        //$('#example_length').css({ "overflow": "auto" });
-        $('#example_filter input').addClass("add");
-        $('#example_filter').append('<span class="glyphicon glyphicon-search form-control-feedback" style="margin-top: -33px; color: #666;"></span>');
-        var list = $("#ClassID").html();
-        $('#example_length').append(
-
-            '<div class="col-md-1" style="width:0%; padding-left:1px;">' +
-             '<div class="d-bar"></div>' +
-            '</div>'
-              +
-
-           '<div class="col-md-4 col-lg-4" style="padding-left=0px">' +
-           '<div class="col-md-1 col-sm-3 col-xs-3" style="padding-left:0px"><a href=""><i class="glyphicon glyphicon-repeat" data-toggle="tooltip" title="Refresh" data-placement="bottom"></i></a></div>' +
-           '<div class="col-md-1 col-sm-3 col-xs-3"><span class="default"><i class="glyphicon glyphicon-edit" data-placement="bottom"></i></a></div>' +
-           '<div class="col-md-1 col-sm-3 col-xs-3"><span class="default"><i class="fa fa-ban"  data-placement="bottom"></i></span>' + '</a></div>' +
-           '<div class="col-md-1 col-sm-3 col-xs-3"><span class="default"><i class="glyphicon glyphicon-download-alt" data-placement="bottom"></i></span></a></div>' +
-           ' <div class="col-md-1" style="width:0%; padding-left:10px;">' +
-           '<div class="d-bar"></div>' +
-           '</div>' +
-          '</div>');
-        $("#Class").prepend("<option value='0'>All</option>");
-    }
-
 
 </script>
 
@@ -138,17 +169,17 @@
 @if (User.IsInRole("Admin"))
 {
     <script>
-        $(document).ready(function () {
-            DrawTable();
-        })
+        //$(document).ready(function () {
+        //    //DrawTable();
+        //})
     </script>
 }
 else
 {
     <script>
-        $(document).ready(function () {
-            DrawTable1();
-        })
+        //$(document).ready(function () {
+        //    DrawTable1();
+        //})
     </script>
 }
 
@@ -157,6 +188,10 @@ else
     span{
         color:gray;
     }*@
+<style>
+    #datatable_filter {
+        display: block !important;
+    }
 </style>
 
 
@@ -188,7 +223,9 @@ else
                                 <th>
                                     Creation Date
                                 </th>
-
+                                <th>
+                                    Action
+                                </th>
                             </tr>
                         </thead>
                         <tbody>
@@ -197,7 +234,7 @@ else
                                 <tr>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.Id)
-
+                                        <input type="hidden" name="name" value="@item.Id" />
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.Name)
@@ -216,6 +253,11 @@ else
 
                                     </td>
 
+                                    <th>
+                                        <button onclick="DeleteBlog(@item.Id)" data-toggle="modal" data-target="#myModal" class="btn btn-danger btn-sm" style="color:white !important;">Delete</button>
+
+                                    </th>
+
                                 </tr>
                             }
                         </tbody>
@@ -224,5 +266,30 @@ else
                 </div>
             </div>
         </div>
+    </div>
+</div>
+
+
+
+
+<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+
+
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title"></h4>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure do you want to delete?</p>
+                <input type="hidden" id="BlogToDeleteId" name="name" value="" />
+            </div>
+            <div class="modal-footer">
+                <button id="ModalDelete" class="btn btn-danger btn-sm">Delete</button>
+                <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel</button>
+            </div>
+        </div>
+
     </div>
 </div>
