--- a/SEA_Application/Views/AspNetSession/Details.cshtml
+++ b/SEA_Application/Views/AspNetSession/Details.cshtml
@@ -1,98 +1,156 @@
-﻿<label>@Html.ActionLink("Home", "Dashboard", "Account") > @Html.ActionLink("Session", "Index", "AspNetSession") > <a href="#"><b>Detail</b></a> </label>
-<h4>Details</h4>
-<div class="box box-primary">
-    <div class="box-body">
-        @model SEA_Application.Models.AspNetSession
-        @{
-            ViewBag.Title = "Edit";
-        }
-        <h4> Session</h4>
-        <input type="hidden" value="@Model.Id" id="ID" />
-        <script>
-            $(document).ready(function () {
-                $('input').prop('disabled',true)
-            })
-        </script>
-        @using (Html.BeginForm())
-        {
-            @Html.AntiForgeryToken()
+﻿@*<label>@Html.ActionLink("Home", "Dashboard", "Account") > @Html.ActionLink("Session", "Index", "AspNetSession") > <a href="#"><b>Detail</b></a> </label>*@
 
-            <div class="form-horizontal">
-             
-                <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                @Html.HiddenFor(model => model.Id)
-                <div class="form-group">
-                    <label class="col-md-1 col-lg-1 control-label">Session Name:<span class="red-mark">*</span></label>
-                    <div class="col-md-6">
-                        @Html.EditorFor(model => model.SessionName, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.SessionName, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
+
+<div class="row">
+    <div class="col-md-12">
+        <div class="card">
+            <div class="card-body p-5">
+
+                @model SEA_Application.Models.AspNetSession
+                @{
+                    ViewBag.Title = "Edit";
+                }
+
+                <input type="hidden" value="@Model.Id" id="ID" />
+                <script>
+                    $(document).ready(function () {
+                        $('input').prop('disabled', true)
+                    })
+                </script>
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
+
+                    <div class="col-md-8 pl-5 pr-5 ">
+
+
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        @Html.HiddenFor(model => model.Id)
+
+
+
+
+                        <div class="form-group bmd-form-group is-filled">
+                            <label class="bmd-label-floating">Session Name:<span class="red-mark">*</span></label>
+
+                            @Html.EditorFor(model => model.SessionName, new { htmlAttributes = new { @class = "form-control" } })
+
+                        </div>
+
+                        @*<div class="form-group">
                     <label class="col-md-1 col-lg-1 control-label">Session Start Date:<span class="red-mark">*</span></label>
                     <div class="col-md-6">
                         @Html.EditorFor(model => model.SessionStartDate, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.SessionStartDate, "", new { @class = "text-danger" })
                     </div>
-                </div>
-                <div class="form-group">
+                </div>*@
+
+                        <div class="form-row mt-4">
+                            <div class="form-group col-md-12 bmd-form-group">
+                                <label for="" class="bmd-label-static pl-2">Session Start Date* </label>
+
+                                @Html.EditorFor(model => model.SessionStartDate, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.SessionStartDate, "", new { @class = "text-danger" })
+
+                            </div>
+                        </div>
+
+
+
+                        @*<div class="form-group">
                     <label class="col-md-1 col-lg-1 control-label">Session End Date:<span class="red-mark">*</span></label>
                     <div class="col-md-6">
                         @Html.EditorFor(model => model.SessionEndDate, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.SessionEndDate, "", new { @class = "text-danger" })
                     </div>
-                </div>
-                <div class="form-group">
+                </div>*@
+
+
+                        <div class="form-row mt-4">
+                            <div class="form-group col-md-12 bmd-form-group">
+                                <label for="" class="bmd-label-static pl-2">Session End Date* </label>
+
+
+                                @Html.EditorFor(model => model.SessionEndDate, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.SessionEndDate, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+
+                        @*<div class="form-group">
                     <label class="col-md-1 col-lg-1 control-label">Total Fee:<span class="red-mark">*</span></label>
                     <div class="col-md-6">
                         @Html.EditorFor(model => model.Total_Fee, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Total_Fee, "", new { @class = "text-danger" })
                     </div>
-                </div>
-                @*<div class="form-group">
+                </div>*@
+
+
+                        <div class="form-group bmd-form-group is-filled">
+
+                            <label class="bmd-label-floating">Total Fee: <span class="red-mark">*</span></label>
+                            @Html.EditorFor(model => model.Total_Fee, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Total_Fee, "", new { @class = "text-danger" })
+                        </div>
+
+
+                        @*<div class="form-group">
                     <label class="col-md-1 col-lg-1 control-label">Status:<span class="red-mark">*</span></label>
                     <div class="col-md-6">
                         @Html.EditorFor(model => model.Status, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
                     </div>
                 </div>*@
-                <hr />
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-lg-offset-1 col-md-6">
-                        <button type="button" id="back" class="btn btn-default" onclick="redirect()">Back</button>
-                        @if (this.User.IsInRole("Admin"))
+
+                    </div>
+                    <br>
+
+                    <div class="col-md-8 pl-5 pr-5 ">
+                      
+                            <button type="button" id="back" class="btn btn-primary rounded rounded-lg bg-transparent text-muted shadow-none mr-3" onclick="redirect()">Back</button>
+                            @if (this.User.IsInRole("Admin"))
+                            {
+                                <button type="button" id="edit" class="btn btn-primary rounded rounded-lg" onclick="redirectToEdit()">Edit</button>
+                                @*<button type="button" id="delete" class="btn btn-default pull-right" onclick="Delete()">Delete</button>*@
+
+                            }
+                   
+
+
+                    </div>
+                    <div class="col-md-offset-2 col-md-4">
+                        @if (ViewBag.Error != null)
                         {
-                        <button type="button" id="edit" class="btn btn-primary" onclick="redirectToEdit()">Edit</button>
-                        @*<button type="button" id="delete" class="btn btn-default pull-right" onclick="Delete()">Delete</button>*@
+                            <span class="text-danger">@ViewBag.Error</span>
 
                         }
                     </div>
-                        
-                                                
-                </div>
-                <div class="col-md-offset-2 col-md-4">
-                    @if (ViewBag.Error != null)
-                    {
-                        <span class="text-danger">@ViewBag.Error</span>
-                       
-                    }
-                </div>
-               
-            </div>
-        }
-        @*<div>
+
+
+                }
+                @*<div>
             @Html.ActionLink("Back to List", "Index")
         </div>*@
+
+
+            </div>
+            </div>
     </div>
 </div>
 
 <script>
+
+
+    $(document).ready(function () {
+
+        $("#PageHeader").html("Details");
+
+    })
+
     function redirect() {
         window.location.href = "Index";
     }
-    function redirectToEdit()
-    {
+    function redirectToEdit() {
         var id = $("#Id").val();
         window.location.href = 'Edit?id=' + id;
     }
@@ -108,22 +166,22 @@
         window.location.href = "/AspNetSession/DeleteSession?id=" + id;
     }
 </script>
-<div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Complete</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                Do you really want to delete this student?
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="cnfmDisable()">Confirm</button>
+@*<div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Complete</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Do you really want to delete this student?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="cnfmDisable()">Confirm</button>
+                </div>
             </div>
         </div>
-    </div>
-</div>
+    </div>*@
