--- a/SEA_Application/Views/AspnetLessons/LessonSessionView.cshtml
+++ b/SEA_Application/Views/AspnetLessons/LessonSessionView.cshtml
@@ -188,8 +188,20 @@
             ]
 
         });
+
+
+        var timer;
+
         $('input#global_filter').on('keyup click', function () {
-            filterGlobal();
+           //filterGlobal();
+
+             clearTimeout(timer);  //clear any running timeout on key up
+    timer = setTimeout(function() { //then give it a second to see if the user is finished
+        //do .post ajax request //then do the ajax call
+        filterGlobal();
+       
+    }, 1000);
+
 
         });
          
