--- a/SEA_Application/Views/AspnetSubjectTopics/ViewTopicsAndLessons.cshtml
+++ b/SEA_Application/Views/AspnetSubjectTopics/ViewTopicsAndLessons.cshtml
@@ -302,7 +302,7 @@
                             <div class="col-md-12">
                                 <div class="table-responsive">
 
-                                    <table class="table1 hover table-striped table-bordered" id="datatable1">
+                                    <table class="table1 hover table-striped table-bordered" id="datatable1" width="100%">
                                         <thead>
                                             <tr>
                                                 <th>Creation Date</th>
