--- a/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
@@ -256,6 +256,17 @@
                         </a>
                     </li>
 
+
+                    <li id="SessionPrePlan" class="nav-item">
+                        <a href="@Url.Action("SessionPrePlan", "AspnetLessons" )" class="nav-link nav-toggle">
+                            <i class="sea-dash">
+                                <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/icon-questions.png" alt="">
+                            </i>
+                            <p>Session Pre Plan </p>
+                        </a>
+                    </li>
+
+
                     <li id="Notes" class="nav-item">
 
                         <a href="@Url.Action("Index", "AspNetNotes" )" class="nav-link nav-toggle">
