--- a/SEA_Application/Views/AspnetLessons/Edit.cshtml
+++ b/SEA_Application/Views/AspnetLessons/Edit.cshtml
@@ -514,11 +514,11 @@
                             <div class="col-md-6 pl-5 pr-5 ">
 
                                 @*<div class="form-row mt-3">
-                                        <div class="form-group col-md-12 bmd-form-group">
-                                            <label for="" class="bmd-label-static pl-2">Select Section*</label>
-                                            <select class="form-control SecIdDDL" id="SessionId" name="SessionId" required></select>
-                                        </div>
-                                    </div>*@
+            <div class="form-group col-md-12 bmd-form-group">
+                <label for="" class="bmd-label-static pl-2">Select Section*</label>
+                <select class="form-control SecIdDDL" id="SessionId" name="SessionId" required></select>
+            </div>
+        </div>*@
                                 <div class="form-row mt-3">
                                     <div class="form-group col-md-12 bmd-form-group">
                                         <label for="" class="bmd-label-static pl-2">Select Course Type*</label>
@@ -599,6 +599,25 @@
                                         <label class="bmd-label-floating">Lesson Duration*</label>
                                         <input type="number" min="10" max="120" value="@ViewBag.LessonDuration" onkeydown="return false" class="form-control" name="LessonDuration" id="LessonDuration" required />
                                         @Html.ValidationMessageFor(model => model.LessonDuration, "", new { @class = "text-danger" })
+
+                                    </div>
+                                </div>
+
+
+                                <div class="form-row mt-3">
+                                    <div class="form-group col-md-12 bmd-form-group">
+                                        <label class="bmd-label-floating">Days Ahead*</label>
+                                        <input type="number" min="0" max="300" value="@Model.DaysAhead" onkeydown="return false" class="form-control" name="DaysAhead" id="DaysAhead" required />
+                                        @Html.ValidationMessageFor(model => model.DaysAhead, "", new { @class = "text-danger" })
+
+                                    </div>
+                                </div>
+                                
+                                <div class="form-row mt-3">
+                                    <div class="form-group col-md-12 bmd-form-group">
+                                        <label class="bmd-label-floating">Due Days*</label>
+                                        <input type="number" min="0" max="300" value="@Model.DueDays" onkeydown="return false" class="form-control" name="DueDays" id="DueDays" required />
+                                        @Html.ValidationMessageFor(model => model.DueDays, "", new { @class = "text-danger" })
 
                                     </div>
                                 </div>
