--- a/SEA_Application/Views/AspnetLessons/SessionPrePlan.cshtml
+++ b/SEA_Application/Views/AspnetLessons/SessionPrePlan.cshtml
@@ -123,7 +123,7 @@
 
     $(document).ready(function () {
 
-        $("#PageHeader").html("Session Pre Plan");
+        $("#PageHeader").html("Session Pre-Plan");
         $("#BreadCrumbs").append(' <li> <a href="/Account/Dashboard"> Home </a> <span>&gt;</span></li>');
         $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#">Lesson Pre Plan</a></li>');
 
