--- a/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
@@ -262,7 +262,7 @@
                             <i class="sea-dash">
                                 <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/icon-questions.png" alt="">
                             </i>
-                            <p>Session Pre Plan </p>
+                            <p>Session Pre-Plan </p>
                         </a>
                     </li>
 
